CSS fix for map controls (caused by Bootstrap collision with Google's map styles).
Added map control option model support to map.models.js.

Added map control styling to locations.controller.js to avoid overlap with search bar.

--- a/src/uLocate.UI/App_Plugins/uLocate/Css/modules/_locations.scss
+++ b/src/uLocate.UI/App_Plugins/uLocate/Css/modules/_locations.scss
@@ -43,5 +43,5 @@
     border: solid 1px $grey;
 }
 
-#location-map label { width: auto; display:inline; }
-#location-map img { max-width: none; }
+#location-map label, .map label { width: auto; display:inline; }
+#location-map img, .map img { max-width: none; }
